# tmp-pyproject-version-action

./: .gitignore  Makefile  README.md  action.yaml  pyproject.toml
.github/workflows/: checks.yml
src/pyprojectversion/: action.py
tests/: test_action.py
