[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproject-version-action"
version = "1.0.0"
authors = [
  { name="Adam Wilmore", email="adam@mx51.io" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "GitPython==3.1.45",
    "PyGithub==2.7.0",
]

[project.scripts]
pyprojectversion = "pyprojectversion.action:main"

[project.urls]
Homepage = "https://github.com/mx51/pyproject-version-action"
Issues = "https://github.com/mx51/pyproject-version-action"

[tool.uv]
dev-dependencies = [
    "coverage==7.10.2",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "pytest_mock==3.14.1",
    "ruff==0.12.7"
]

[tool.ruff]
line-length = 160

